--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,19 @@
 #logging.level.org.springframework=debug
 spring.jackson.serialization.write-dates-as-timestamps=false
+logging.level.org.springframework=info
+spring.messages.basename=messages
+management.endpoints.web.exposure.include=*
+#spring.security.user.name=user
+#spring.security.user.password=password
+
+spring.datasource.url=jdbc:h2:mem:sampledb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.h2.console.enabled=true
+spring.jpa.show-sql=true
+
+
 
